--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,8 @@
     {
       "path": "./nightwatch/tsconfig.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "paths": { "@/*":["./src/*"] }
+  }
 }
