--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:e2e": "nightwatch tests/e2e",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
@@ -22,11 +23,13 @@
     "@nightwatch/vue": "0.4.5",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
+    "@types/jest": "^29.5.3",
     "@types/jsdom": "^21.1.1",
     "@types/nightwatch": "^2.3.24",
     "@types/node": "^20.4.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vitest/coverage-v8": "^0.33.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
